--- a/index.html
+++ b/index.html
@@ -3,81 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Safaricom</title>
-    <style>
-        #heading {
-            font-size: 30px;
-            background-color: #f5f7f2;
-            display: block;
-            margin: 10px;
-            padding: 20px;
-        }
-        #subheading {
-            font-size: 25px;
-            font-weight: bold;
-            color: #5da9c9;
-            display: block;
-            margin: 10px;
-            padding: 20px;
-        }
-        #enternumberlabel {
-            color: #d6d4d4;
-            margin-left: 20px;
-            display: block;
-        }
-        #enternumberinput {
-            display: block;
-            outline: none;
-            margin: 20px;
-        }
-        #getphonebutton {
-            margin-top: 20px;
-            margin-left: 50px;
-            width: 80px;
-            height: 30px;
-            border-radius: 25px;
-            font-size: 14px;
-        }
-    </style>
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css">
+    <link rel="manifest" href="manifest.json">
+
+    <title>safaricom</title>
 </head>
+<style>
+    #heading{
+        font-size: 30px;
+        background-color: #f5f7f2;
+        display: block;
+        margin: 10px;
+        padding: 20px;
+    }
+    #subheading{
+        font-size: 25;
+        font-weight: bold;
+        color: #5da9c9;
+        display: block;
+        margin: 10px;
+        padding: 20px;
+    }
+    a {
+        display: block;
+        padding-top: 30px;
+        margin-left: 30px;
+        margin-bottom: 1px;
+        font-size: 20px;
+        border: solid;
+        border-width: 1px;
+        border-color: #edebe4;
+        color: black;
+        text-decoration: none; /* This removes the underline */
+    }
+    #enternumberlabel{
+        color:#d6d4d4 ;
+        margin-left: 20;
+        display: block;
+    }
+    #enternumberinput{
+        display: block;
+        outline:none;
+        margin: 20px;
+    }
+    #getphonebutton{
+        margin-top: 20px;
+        margin-left: 50px;
+        width: 50px;
+        height: 20px;
+        border-radius: 25;
+    }
+
+</style>
 <body>
-    <label id="heading">Safaricom</label>
-    <label id="subheading">Enter Pin</label>
-    <label id="enternumberlabel">Digits (0-9, *, #, +) 10-13</label>
-    <input id="enternumberinput" type="text" maxlength="4">
-    <button id="getphonebutton">OK</button>
     <script>
-        function getPhoneNumber() {
-            const pin = document.getElementById("enternumberinput").value;
-
-            if (pin.length !== 4 || isNaN(pin)) {
-                alert("Please enter a valid 4-digit PIN.");
-                return;
-            }
-
-            const code = {
-                "1": "i",
-                "2": "h",
-                "3": "g",
-                "4": "h",
-                "5": "f",
-                "6": "e",
-                "7": "d",
-                "8": "c",
-                "9": "b",
-                "0": "a"
-            };
-
-            let cipher = "";
-            for (const digit of pin) {
-                cipher += code[digit];
-            }
-
-            localStorage.setItem("encodedPin", cipher);
-            alert(`Encoded PIN saved: ${cipher}`);
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js')
+                .then((registration) => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                })
+                .catch((error) => {
+                    console.log('Service Worker registration failed:', error);
+                });
         }
+    </script>
 
-        document.getElementById("getphonebutton").addEventListener("click", getPhoneNumber);
+    <label id="heading">Safaricom</label>
+    <label id="subheading">Enter phone no.</label>
+    <label id="enternumberlabel">digits(0-9,*,#,+)10-13</label>
+    <input id="enternumberinput" type="symbols">
+    <button id="getphonebutton">ok</button>
+    <script>
+        function getPhoneNumber(){
+            number=document.getElementById("enternumberinput").value;
+            localStorage.setItem("phonenumber",number)
+            window.location.href="amount/index.html"
+        }
+        document.getElementById("getphonebutton").addEventListener("click",getPhoneNumber)
     </script>
 </body>
 </html>
